--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 pydantic==2.5.0
+python-telegram-bot==20.6
+apscheduler==3.10.4
 Jinja2==3.1.2
+pytz==2025.2
+tzlocal==5.3.1
